--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,1 +1,10 @@
 <h1>About Page</h1>
+<p>
+  This is a movie database where I have some of my favorite movies. I also have
+  it open so anyone can upload their own favorite movies. you can also explore
+  the list of other movies that have been uploaded. There is a search button
+  near the top that will allow you to search by titles. Make sure the movie you
+  want to add isn't already there before you click on the add link. To add
+  movies simply hit the logIn button. Once you are logged in you will be able to
+  add, edit, and delete from the list of movies.
+</p>
