--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,12 @@
 <div class="author">
-  <h1 class="author__heading">Hello, I'm a developer.</h1>
-  <p class="author__body">Web Developer and Student</p>
+  <h1 class="author__heading">Welcome to my movie Database</h1>
+  <p class="author__body">browse this list of movies and add your own.</p>
 </div>
 
-<img src="img/cyberTree.jpg" alt="Cyber Tree" />
+<img
+  src="https://payload.cargocollective.com/1/11/367710/13568488/MOVIECLASSICSerikweb_2500_1340_c.jpg"
+  alt="movie collage"
+/>
 
 <section class="articles">
   <h2 class="articles__heading">Latest Posts</h2>
