--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <a href="/" class="header__logo">NodeJS</a>
+  <a href="/" class="header__logo">Movie DB</a>
   <nav class="header__nav">
     <ul>
       <li>
@@ -9,12 +9,12 @@
         <a href="/about" class="">About</a>
       </li>
       <li>
-        <a href="/contact" class="">Contact</a>
+        <a href="/admin" class="">LogIn</a>
       </li>
     </ul>
   </nav>
 
-  <div class="header__butt">
+  <div class="header__button">
     <button class="searchBtn" aria-expanded="false">Search</button>
     <svg
       xmlns="http://www.w3.org/2000/svg"
