--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -9,7 +9,7 @@
         <a href="/about" class="">About</a>
       </li>
       <li>
-        <a href="/contact" class="">Contact</a>
+        <a href="/logout" class="">LogOut</a>
       </li>
     </ul>
   </nav>
