--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,2 +1,3 @@
 <h1><%= data.title %></h1>
+<img src="<%= data.moviePoster %>" alt="Movie Poster" class="mPoster" />
 <aticle class="article"><%- data.body %></aticle>
