--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,11 +66,15 @@ textarea {
 }
 
 img {
-  width: 65%;
+  width: 100%;
   height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.mPoster {
+  width: 50%;
 }
 
 /* Layout */
