--- a/views/admin/add-post.ejs
+++ b/views/admin/add-post.ejs
@@ -1,14 +1,17 @@
 <a href="/dashboard">&larr; Back</a>
 <div class="admin-title">
-  <h2>Add New Post</h2>
+  <h2>Add New Movie</h2>
 </div>
 
 <form action="/add-post/" method="POST">
   <label for="title"><b>Title</b></label>
-  <input type="text" placeholder="Post Title" name="title" />
+  <input type="text" placeholder="Movie Title" name="title" />
 
-  <label for="body"><b>Content</b></label>
+  <label for="body"><b>Description</b></label>
   <textarea name="body" cols="50" rows="10"></textarea>
+
+  <label for="moviePoster"><b>Movie Poster URL</b></label>
+  <input type="text" placeholder="Insert URL" name="moviePoster" />
 
   <input type="submit" value="Add" class="btn" />
 </form>
