--- a/views/admin/edit-post.ejs
+++ b/views/admin/edit-post.ejs
@@ -16,8 +16,16 @@
     value="<%= data.title %>"
   />
 
-  <label for="body"><b>Content</b></label>
+  <label for="body"><b>Description</b></label>
   <textarea name="body" cols="50" rows="10"><%= data.body %></textarea>
+
+  <label for="moviePoster"><b>Movie Poster URL</b></label>
+  <input
+    type="text"
+    placeholder="movie poster URL"
+    name="moviePoster"
+    value="<%= data.moviePoster %>"
+  />
 
   <input type="submit" value="Update" class="btn" />
 </form>
